--- a/wnetrza.html
+++ b/wnetrza.html
@@ -1919,22 +1919,7 @@
       align-items: center;
     }
   }
-</style><div class="fluid-engine fe-667f2b180dbb5c1ef8077b74"><div class="fe-block fe-block-62c282744641be4279b2"><div class="sqs-block html-block sqs-block-html" data-blend-mode="NORMAL" data-block-type="2" data-border-radii="&#123;&quot;topLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;topRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;&#125;" id="block-62c282744641be4279b2"><div class="sqs-block-content">
-<div class="sqs-html-content">
-  <p style="text-align:justify;white-space: normal !important;white-space:pre-wrap;" class="sqsrte-small">Średni czas wykonania projektu w wariancie podstawowym to 10-15 dni projektowych w przypadku mieszkania w stanie deweloperskim z jedną łazienką.</p><p class="" data-rte-preserve-empty="true" style="white-space:pre-wrap;"></p><p style="text-align:center;white-space:pre-wrap;" class="sqsrte-small"><strong>Cena projektu w tym wariancie:</strong></p><p style="text-align:center;white-space:pre-wrap;" class="sqsrte-small"><strong>od 2500 zł brutto</strong></p>
-</div>
-</div></div></div>
-  <div class="fe-block fe-block-f0906a5d6d303b88c745"><div class="sqs-block html-block sqs-block-html" data-blend-mode="NORMAL" data-block-type="2" data-border-radii="&#123;&quot;topLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;topRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;&#125;" id="block-f0906a5d6d303b88c745"><div class="sqs-block-content">
-<div class="sqs-html-content">
-  <p style="text-align:justify;white-space: normal !important;white-space:pre-wrap;" class="sqsrte-small">Średni czas wykonania projektu w wariancie rozszerzonym to 25-30 dni projektowych w przypadku mieszkania w stanie deweloperskim z jedną łazienką.</p><p class="" data-rte-preserve-empty="true" style="white-space:pre-wrap;"></p><p style="text-align:center;white-space:pre-wrap;" class="sqsrte-small"><strong>Cena projektu w tym wariancie:</strong></p><p style="text-align:center;white-space:pre-wrap;" class="sqsrte-small"><strong>od 6000 zł brutto</strong></p>
-</div>
-</div></div></div>
-  <div class="fe-block fe-block-f87f9bfc43355784f309"><div class="sqs-block html-block sqs-block-html" data-blend-mode="NORMAL" data-block-type="2" data-border-radii="&#123;&quot;topLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;topRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;&#125;" id="block-f87f9bfc43355784f309"><div class="sqs-block-content">
-<div class="sqs-html-content">
-  <p style="text-align:justify;white-space: normal !important;white-space:pre-wrap;" class="sqsrte-small">Średni czas wykonania projektu w wariancie kompleksowym to 35-50 dni projektowych w przypadku mieszkania w stanie deweloperskim z jedną łazienką.</p><p class="" data-rte-preserve-empty="true" style="white-space:pre-wrap;"></p><p style="text-align:center;white-space:pre-wrap;" class="sqsrte-small"><strong>Cena projektu w tym wariancie:</strong></p><p style="text-align:center;white-space:pre-wrap;" class="sqsrte-small"><strong>od 9000 zł brutto</strong></p>
-</div>
-</div></div></div>
-</div></div>
+</style></div>
     </div>
   </div>
 </section>
