--- a/wnetrza.html
+++ b/wnetrza.html
@@ -1588,6 +1588,18 @@
             max-width: 100%;
           "
         >
+<style>
+  ul {
+  text-align: center !important;
+  width: fit-content !important; /* Makes the <ul> as wide as its content */
+  margin: 0 auto !important; /* Centers the <ul> itself */
+  padding: 0 !important; /* Removes default padding */
+}
+li {
+  display: inline-block !important; /* Ensures items line up horizontally */
+  margin: 0 10px !important; /* Adds spacing between items */
+}
+</style>
           <p class="" style="white-space:pre-wrap;">W skład pakietu wchodzi: </p><ul data-rte-list="default"><li><p class="" style="white-space:pre-wrap;">układ funkcjonalny pomieszczenia</p></li></ul><ul data-rte-list="default"><li><p class="" style="white-space:pre-wrap;">prezentacje sposobu rozmieszczenia mebli </p></li><li><p class="" style="white-space:pre-wrap;">moodbaord przedstawiający proponowaną kolorystykę i styl mebli oraz dodatków </p></li><li><p class="" style="white-space:pre-wrap;">spis ich na liście elementów – tylko wyszczególnienie najważniejszych bez dekoracji czy dodatków</p></li><li><p class="" style="white-space:pre-wrap;">fotorealistyczne wizualizacje wnętrza 3D – średnio 3-4 szt. na pomieszczenie</p></li></ul><p class="" data-rte-preserve-empty="true" style="white-space:pre-wrap;"></p>
         
         <p style="text-align:justify;white-space: normal !important;white-space:pre-wrap;" class="sqsrte-small">Średni czas wykonania projektu w wariancie podstawowym to 10-15 dni projektowych w przypadku mieszkania w stanie deweloperskim z jedną łazienką.</p><p class="" data-rte-preserve-empty="true" style="white-space:pre-wrap;"></p><p style="text-align:center;white-space:pre-wrap;" class="sqsrte-small"><strong>Cena projektu w tym wariancie:</strong></p><p style="text-align:center;white-space:pre-wrap;" class="sqsrte-small"><strong>od 2500 zł brutto</strong></p>
