--- a/wnetrza.html
+++ b/wnetrza.html
@@ -1643,7 +1643,7 @@ li {
           <p class="" style="white-space:pre-wrap;">Pakiet zawiera wszystkie elementy pakietu podstawowego a ponadto:</p><ul data-rte-list="default"><li><p class="" style="white-space:pre-wrap;">schemat elektryki, oświetlenia i instalacji wod-kan, umiejscowienie przyłączy </p></li><li><p class="" style="white-space:pre-wrap;">rzuty ścian pomieszczenia z zaznaczeniem elementów, mebli, oświetlenia i dekoracji stałych, wymiarowaniem</p></li></ul>
         
         
-  <br><br><br><br><br><p style="white-space: normal !important;white-space:pre-wrap;" class="sqsrte-small">Średni czas wykonania projektu w wariancie rozszerzonym to 25-30 dni projektowych w przypadku mieszkania w stanie deweloperskim z jedną łazienką.</p><p style="text-align:center;white-space:pre-wrap;" class="sqsrte-small"><strong>Cena projektu w tym wariancie:</strong></p><p style="text-align:center;white-space:pre-wrap;" class="sqsrte-small"><strong>od 6000 zł brutto</strong></p>
+  <br><br><br><br><p style="white-space: normal !important;white-space:pre-wrap;" class="sqsrte-small">Średni czas wykonania projektu w wariancie rozszerzonym to 25-30 dni projektowych w przypadku mieszkania w stanie deweloperskim z jedną łazienką.</p><p style="text-align:center;white-space:pre-wrap;" class="sqsrte-small"><strong>Cena projektu w tym wariancie:</strong></p><p style="text-align:center;white-space:pre-wrap;" class="sqsrte-small"><strong>od 6000 zł brutto</strong></p>
         </div>
     </div>
 </div>
