--- a/ogrody.html
+++ b/ogrody.html
@@ -1914,78 +1914,18 @@
 <div class="sqs-html-content">
   <p style="text-align:justify;white-space: normal !important;white-space:pre-wrap;" class="sqsrte-small">Średni czas wykonania projektu w wariancie podstawowym to 30-35 dni projektowych w przypadku ogrodu o powierzchni do 1000 m2.</p><p class="" data-rte-preserve-empty="true" style="white-space:pre-wrap;"></p><p style="text-align:center;white-space:pre-wrap;" class="sqsrte-small"><strong>Cena projektu w tym wariancie:</strong></p><p style="text-align:center;white-space:pre-wrap;" class="sqsrte-small"><strong>od 7000 zł brutto</strong></p>
 </div>
-</div></div></div><div class="fe-block fe-block-d8f85df951dd4f5ce2ed"><div class="sqs-block website-component-block sqs-block-website-component website-component-block sqs-block-website-component" data-block-type="1337" data-definition-name="website.components.shape" id="block-d8f85df951dd4f5ce2ed"><div class="sqs-block-content">
-<div
-  class="sqs-shape-block-container sqs-block-alignment-wrapper"
-  data-shape-name="circle"
-      data-blend-mode='normal'
->
-      <svg xmlns="http://www.w3.org/2000/svg" class="sqs-shape" viewBox="0 0 100 100"><circle cx="50" cy="50" r="49.5"/></svg>
-  <style>
-    #block-d8f85df951dd4f5ce2ed .sqs-block-alignment-wrapper {
-      justify-content: center;
-    }
-      #block-d8f85df951dd4f5ce2ed .sqs-shape > * {
-          stroke: none;
-      }
-        #block-d8f85df951dd4f5ce2ed {
-          --shape-block-background-color: 
-      hsla(var(--lightAccent-hsl), 1)
-;
-        }
-  </style>
-</div>
-</div></div></div><div class="fe-block fe-block-c5264a93892f9d1cf54d"><div class="sqs-block html-block sqs-block-html" data-blend-mode="NORMAL" data-block-type="2" data-border-radii="&#123;&quot;topLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;topRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;&#125;" id="block-c5264a93892f9d1cf54d"><div class="sqs-block-content">
+</div></div></div>
+  <div class="fe-block fe-block-c5264a93892f9d1cf54d"><div class="sqs-block html-block sqs-block-html" data-blend-mode="NORMAL" data-block-type="2" data-border-radii="&#123;&quot;topLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;topRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;&#125;" id="block-c5264a93892f9d1cf54d"><div class="sqs-block-content">
 <div class="sqs-html-content">
   <p style="text-align:justify;white-space: normal !important;white-space:pre-wrap;" class="sqsrte-small">Średni czas wykonania projektu w wariancie rozszerzonym to 40-55 dni projektowych w przypadku ogrodu o powierzchni do 1000 m2.</p><p class="" data-rte-preserve-empty="true" style="white-space:pre-wrap;"></p><p style="text-align:center;white-space:pre-wrap;" class="sqsrte-small"><strong>Cena projektu w tym wariancie:</strong></p><p style="text-align:center;white-space:pre-wrap;" class="sqsrte-small"><strong>od 10 000 zł brutto</strong></p>
 </div>
-</div></div></div><div class="fe-block fe-block-8d2768fa178dc7c8c5d2"><div class="sqs-block website-component-block sqs-block-website-component website-component-block sqs-block-website-component" data-block-type="1337" data-definition-name="website.components.shape" id="block-8d2768fa178dc7c8c5d2"><div class="sqs-block-content">
-<div
-  class="sqs-shape-block-container sqs-block-alignment-wrapper"
-  data-shape-name="circle"
-      data-blend-mode='normal'
->
-      <svg xmlns="http://www.w3.org/2000/svg" class="sqs-shape" viewBox="0 0 100 100"><circle cx="50" cy="50" r="49.5"/></svg>
-  <style>
-    #block-8d2768fa178dc7c8c5d2 .sqs-block-alignment-wrapper {
-      justify-content: center;
-    }
-      #block-8d2768fa178dc7c8c5d2 .sqs-shape > * {
-          stroke: none;
-      }
-        #block-8d2768fa178dc7c8c5d2 {
-          --shape-block-background-color: 
-      hsla(var(--lightAccent-hsl), 1)
-;
-        }
-  </style>
-</div>
-</div></div></div><div class="fe-block fe-block-6927431e00d797badb23"><div class="sqs-block html-block sqs-block-html" data-blend-mode="NORMAL" data-block-type="2" data-border-radii="&#123;&quot;topLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;topRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;&#125;" id="block-6927431e00d797badb23"><div class="sqs-block-content">
+</div></div></div>
+  <div class="fe-block fe-block-6927431e00d797badb23"><div class="sqs-block html-block sqs-block-html" data-blend-mode="NORMAL" data-block-type="2" data-border-radii="&#123;&quot;topLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;topRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;&#125;" id="block-6927431e00d797badb23"><div class="sqs-block-content">
 <div class="sqs-html-content">
   <p style="text-align:justify;white-space: normal !important;white-space:pre-wrap;" class="sqsrte-small">Średni czas wykonania projektu w wariancie kompleksowym to 60-75 dni projektowych w przypadku ogrodu o powierzchni do 1000 m2.</p><p class="" data-rte-preserve-empty="true" style="white-space:pre-wrap;"></p><p style="text-align:center;white-space:pre-wrap;" class="sqsrte-small"><strong>Cena projektu w tym wariancie:</strong></p><p style="text-align:center;white-space:pre-wrap;" class="sqsrte-small"><strong>od 14 000 zł brutto</strong></p>
 </div>
-</div></div></div><div class="fe-block fe-block-619e14fba432b6f79ba4"><div class="sqs-block website-component-block sqs-block-website-component website-component-block sqs-block-website-component" data-block-type="1337" data-definition-name="website.components.shape" id="block-619e14fba432b6f79ba4"><div class="sqs-block-content">
-<div
-  class="sqs-shape-block-container sqs-block-alignment-wrapper"
-  data-shape-name="circle"
-      data-blend-mode='normal'
->
-      <svg xmlns="http://www.w3.org/2000/svg" class="sqs-shape" viewBox="0 0 100 100"><circle cx="50" cy="50" r="49.5"/></svg>
-  <style>
-    #block-619e14fba432b6f79ba4 .sqs-block-alignment-wrapper {
-      justify-content: center;
-    }
-      #block-619e14fba432b6f79ba4 .sqs-shape > * {
-          stroke: none;
-      }
-        #block-619e14fba432b6f79ba4 {
-          --shape-block-background-color: 
-      hsla(var(--lightAccent-hsl), 1)
-;
-        }
-  </style>
-</div>
-</div></div></div></div></div>
+</div></div></div>
+</div></div>
     </div>
   </div>
 </section>
