--- a/ogrody.html
+++ b/ogrody.html
@@ -1588,6 +1588,10 @@
           "
         >
           <p class="" style="white-space:pre-wrap;">W skład pakietu wchodzi: </p><ul data-rte-list="default"><li><p class="" style="white-space:pre-wrap;">inwentaryzacja - na podstawie pomiarów wykonanych w Państwa zakresie lub mapy do celów projektowych/ rysunków deweloperskich (w przypadku tarasów/ balkonów)</p></li><li><p class="" style="white-space:pre-wrap;">zdjęcia inspiracji/szkiców</p></li><li><p class="" style="white-space:pre-wrap;">projekt koncepcyjny w dwóch wersjach</p></li><li><p class="" style="white-space:pre-wrap;">do każdej z wersj rysunek koncepcyjny ogrodu w formie 2D  </p></li><li><p class="" style="white-space:pre-wrap;">schemat funkcjonalny każdej z koncepcji czyli propozycja rozmieszczenia głównych elementów ogrodu (trawnik, rabaty kwiatowe, ścieżki, miejsce wypoczynku, miejsce do przechowywania wyposażenia ogrodowe, itd.).</p></li><li><p class="" style="white-space:pre-wrap;">dobór podstawowych roślin i materiałów</p></li><li><p class="" style="white-space:pre-wrap;">uproszczone wizualizacje </p></li><li><p class="" style="white-space:pre-wrap;">orientacyjny koszt wykonania projektu (bez kosztów robocizny) </p></li><li><p class="" style="white-space:pre-wrap;">zalecenia do pielęgnacji ogrodu</p></li></ul>
+<p style="white-space: normal !important;white-space:pre-wrap;" class="sqsrte-small">Średni czas wykonania projektu w wariancie podstawowym to 30-35 dni projektowych w przypadku ogrodu o powierzchni do 1000 m².</p>
+
+<p style="text-align:center;white-space:pre-wrap;" class="sqsrte-small"><strong>Cena projektu w tym wariancie:</strong></p>
+<p style="text-align:center;white-space:pre-wrap;" class="sqsrte-small"><strong>od 7000 zł brutto</strong></p>
         </div>
     </div>
 </div>
@@ -1626,6 +1630,11 @@
           "
         >
           <p class="" style="white-space:pre-wrap;">Pakiet zawiera wszystkie elementy pakietu podstawowego a ponadto po wybraniu jednej z proponowanych wersji:</p><ul data-rte-list="default"><li><p class="" style="white-space:pre-wrap;">projekt koncepcyjny ogrodu w formie 3 D </p></li></ul><ul data-rte-list="default"><li><p class="" style="white-space:pre-wrap;">animacja w formie spaceru po przyszłym ogrodzie</p></li><li><p class="" style="white-space:pre-wrap;">projekt wykonawczy w formie rzutu ogrodu z wymiarami i opisami </p></li><li><p class="" style="white-space:pre-wrap;">szczegółowy dobór roślin w formie tabeli wraz z linkami zakupowymi oraz informacją na co należy zwrócić uwagę przy zakupie sadzonek</p></li><li><p class="" style="white-space:pre-wrap;">zestawienie projektowanego wyposażenia wraz z linkami zakupowymi </p></li><li><p class="" style="white-space:pre-wrap;">zestawienie materiałowe i ilościowe projektowanych nawierzchni</p></li></ul>
+<p style="white-space: normal !important;white-space:pre-wrap;" class="sqsrte-small">Średni czas wykonania projektu w wariancie rozszerzonym to 40-55 dni projektowych w przypadku ogrodu o powierzchni do 1000 m².</p>
+
+<p style="text-align:center;white-space:pre-wrap;" class="sqsrte-small"><strong>Cena projektu w tym wariancie:</strong></p>
+<p style="text-align:center;white-space:pre-wrap;" class="sqsrte-small"><strong>od 10 000 zł brutto</strong></p>
+        
         </div>
     </div>
 </div>
@@ -1664,6 +1673,11 @@
           "
         >
           <p class="" style="white-space:pre-wrap;">Pakiet pokrywa się zakrasem Pakietu rozszerzonego i dodatkowo obejmuje:</p><ul data-rte-list="default"><li><p class="" style="white-space:pre-wrap;">wizualizacje ogrodu w różnych porach roku  </p></li><li><p class="" style="white-space:pre-wrap;">wstępny projekt nawadniania ogrodu</p></li><li><p class="" style="white-space:pre-wrap;">projekt oświetlenia ogrodu wraz z wizualizacjami nocnymi  </p></li><li><p class="" style="white-space:pre-wrap;">rysunki techniczne niezbędne do wykonania powierzchni utwardzanych</p></li><li><p class="" style="white-space:pre-wrap;">rysunki techniczne niezbędne do wykonania małej architektury ogrodowej</p></li><li><p class="" style="white-space:pre-wrap;">wybór i zakup sadzonek bezpośrednio u sprawdzonych szkółkarzy i w centrach ogrodniczych </p></li><li><p class="" style="white-space:pre-wrap;">wizyty na terenie budowy ogrodu w celu nadzorowania prawidłowości realizacji projektu</p></li></ul>
+<p style="white-space: normal !important;white-space:pre-wrap;" class="sqsrte-small">Średni czas wykonania projektu w wariancie kompleksowym to 60-75 dni projektowych w przypadku ogrodu o powierzchni do 1000 m².</p>
+
+<p style="text-align:center;white-space:pre-wrap;" class="sqsrte-small"><strong>Cena projektu w tym wariancie:</strong></p>
+<p style="text-align:center;white-space:pre-wrap;" class="sqsrte-small"><strong>od 14 000 zł brutto</strong></p>
+        
         </div>
     </div>
 </div>
