--- a/wnetrza.html
+++ b/wnetrza.html
@@ -1202,7 +1202,7 @@
   data-section-title-enabled="false"
   data-space-below-section-title-value="70"
   data-space-below-section-title-unit="px"
-  data-layout-width="full"
+  data-layout-width="inset"
 >
 <style>
   .user-items-list-item-container[data-section-id="667b16a014f0ae47cd836620"] .list-item-content__title {
@@ -1544,7 +1544,7 @@
   data-title-placement="center"
   data-body-placement="center"
   data-button-placement="center"
-  data-layout-width="full"
+  data-layout-width="inset"
   data-title-font-unit="rem"
   data-description-font-unit="rem"
   data-button-font-unit="rem"
