--- a/ogrody.html
+++ b/ogrody.html
@@ -1091,7 +1091,7 @@
   }
 </style><div class="fluid-engine fe-667c49aba005815ccb10bc22"><div class="fe-block fe-block-68430e04ec1a6a5f12b4"><div class="sqs-block html-block sqs-block-html" data-blend-mode="NORMAL" data-block-type="2" data-border-radii="&#123;&quot;topLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;topRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;&#125;" id="block-68430e04ec1a6a5f12b4"><div class="sqs-block-content">
 <div class="sqs-html-content">
-  <h2 style="text-align:center;white-space:pre-wrap;">Projektowanie zieleni</h2>
+  <h2 style="text-align:center;white-space:pre-wrap;">Projektowanie zieleni</h2><br>
 </div>
 </div></div></div><div class="fe-block fe-block-56582282ee224b780f1d"><div class="sqs-block html-block sqs-block-html" data-blend-mode="NORMAL" data-block-type="2" data-border-radii="&#123;&quot;topLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;topRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;&#125;" id="block-56582282ee224b780f1d"><div class="sqs-block-content">
 <div class="sqs-html-content">
