--- a/wnetrza.html
+++ b/wnetrza.html
@@ -1092,7 +1092,7 @@
   }
 </style><div class="fluid-engine fe-6679594fef95203740773ed5"><div class="fe-block fe-block-2b783b25542ab8bbac4b"><div class="sqs-block html-block sqs-block-html" data-blend-mode="NORMAL" data-block-type="2" data-border-radii="&#123;&quot;topLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;topRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;&#125;" id="block-2b783b25542ab8bbac4b"><div class="sqs-block-content">
 <div class="sqs-html-content">
-  <h2 style="text-align:center;white-space:pre-wrap;">Projektowanie wnętrz</h2>
+  <h2 style="text-align:center;white-space:pre-wrap;">Projektowanie wnętrz</h2><br>
 </div>
 </div></div></div><div class="fe-block fe-block-48c00cbf463bfb35e124"><div class="sqs-block html-block sqs-block-html" data-blend-mode="NORMAL" data-block-type="2" data-border-radii="&#123;&quot;topLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;topRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;&#125;" id="block-48c00cbf463bfb35e124"><div class="sqs-block-content">
 <div class="sqs-html-content">
