--- a/portfolio/example.html
+++ b/portfolio/example.html
@@ -1162,7 +1162,7 @@
 
     if (isImage(item.content)) {
       const img = document.createElement('img');
-      img.src = "/images/" + item.content;
+      img.src = "/portfolio/images/" + item.content;
       img.className = 'custom-gallery__image';
       img.alt = `Project ${index + 1}`;
       element.appendChild(img);
