--- a/portfolio/example.html
+++ b/portfolio/example.html
@@ -1,9 +1,8 @@
 <!doctype html>
 <html xmlns:og="http://opengraphprotocol.org/schema/" xmlns:fb="http://www.facebook.com/2008/fbml" lang="en-US"  >
   <head>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- pracowniabofajnietu -->
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <base href="">
 <meta charset="utf-8" />
 <title>2 &mdash; BoFajnieTu</title>
@@ -1129,18 +1128,19 @@
     }
 
     .custom-gallery__item {
-      margin-bottom: 0; /* Reset margin for desktop */
+      margin-bottom: 0;
     }
   }
 </style>
 
 <section id="custom-gallery-container" class="custom-gallery">
   <div id="custom-gallery-items" class="custom-gallery__items">
-    <!-- Columns will be dynamically inserted here -->
   </div>
 </section>
 
-<script>
+  
+<!-- SKRYPT -->
+<script> 
   const items = [
     { content: 'bluszczanska_salon.jpg' },
     { content: 'bluszczanska_lazienka.jpg' },
