--- a/portfolio/example.html
+++ b/portfolio/example.html
@@ -5,12 +5,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <base href="">
 <meta charset="utf-8" />
-<title>2 &mdash; BoFajnieTu</title>
+<title>NUMER &mdash; BoFajnieTu</title>
 <meta http-equiv="Accept-CH" content="Sec-CH-UA-Platform-Version, Sec-CH-UA-Model" />
 <link rel="icon" type="image/png" href="/images/FavIcon.png"/>
-<link rel="canonical" href="https://pracowniabofajnietu.squarespace.com/portfolio/2"/>
 <meta property="og:site_name" content="BoFajnieTu"/>
-<meta property="og:title" content="2 &mdash; BoFajnieTu"/>
+<meta property="og:title" content="NUMER &mdash; BoFajnieTu"/>
 <meta property="og:url" content="https://pracowniabofajnietu.squarespace.com/portfolio/2"/>
 <meta property="og:type" content="website"/>
 <meta property="og:image" content="http://static1.squarespace.com/static/66794c0184324035e9bb5b17/6679e2179d8c9b3efb317042/6679e2179d8c9b3efb317043/1719780517702/2.jpg?format=1500w"/>
@@ -21,9 +20,8 @@
 <meta itemprop="thumbnailUrl" content="http://static1.squarespace.com/static/66794c0184324035e9bb5b17/6679e2179d8c9b3efb317042/6679e2179d8c9b3efb317043/1719780517702/2.jpg?format=1500w"/>
 <link rel="image_src" href="http://static1.squarespace.com/static/66794c0184324035e9bb5b17/6679e2179d8c9b3efb317042/6679e2179d8c9b3efb317043/1719780517702/2.jpg?format=1500w" />
 <meta itemprop="image" content="http://static1.squarespace.com/static/66794c0184324035e9bb5b17/6679e2179d8c9b3efb317042/6679e2179d8c9b3efb317043/1719780517702/2.jpg?format=1500w"/>
-<meta name="twitter:title" content="2 — BoFajnieTu"/>
+<meta name="twitter:title" content="NUMER — BoFajnieTu"/>
 <meta name="twitter:image" content="http://static1.squarespace.com/static/66794c0184324035e9bb5b17/6679e2179d8c9b3efb317042/6679e2179d8c9b3efb317043/1719780517702/2.jpg?format=1500w"/>
-<meta name="twitter:url" content="https://pracowniabofajnietu.squarespace.com/portfolio/2"/>
 <meta name="twitter:card" content="summary"/>
 <meta name="description" content="" />
 <link rel="preconnect" href="https://images.squarespace-cdn.com">
