--- a/portfolio/example.html
+++ b/portfolio/example.html
@@ -12,16 +12,16 @@
 <meta property="og:title" content="NUMER &mdash; BoFajnieTu"/>
 <meta property="og:url" content="https://pracowniabofajnietu.squarespace.com/portfolio/2"/>
 <meta property="og:type" content="website"/>
-<meta property="og:image" content="http://static1.squarespace.com/static/66794c0184324035e9bb5b17/6679e2179d8c9b3efb317042/6679e2179d8c9b3efb317043/1719780517702/2.jpg?format=1500w"/>
+<meta property="og:image" content="/images/LogoB50.png"/>
 <meta property="og:image:width" content="640"/>
 <meta property="og:image:height" content="480"/>
 <meta itemprop="name" content="example — BoFajnieTu"/>
 <meta itemprop="url" content="https://pracowniabofajnietu.squarespace.com/portfolio/2"/>
-<meta itemprop="thumbnailUrl" content="http://static1.squarespace.com/static/66794c0184324035e9bb5b17/6679e2179d8c9b3efb317042/6679e2179d8c9b3efb317043/1719780517702/2.jpg?format=1500w"/>
-<link rel="image_src" href="http://static1.squarespace.com/static/66794c0184324035e9bb5b17/6679e2179d8c9b3efb317042/6679e2179d8c9b3efb317043/1719780517702/2.jpg?format=1500w" />
-<meta itemprop="image" content="http://static1.squarespace.com/static/66794c0184324035e9bb5b17/6679e2179d8c9b3efb317042/6679e2179d8c9b3efb317043/1719780517702/2.jpg?format=1500w"/>
+<meta itemprop="thumbnailUrl" content="/images/LogoB50.png"/>
+<link rel="image_src" href="/images/LogoB50.png" />
+<meta itemprop="image" content="/images/LogoB50.png"/>
 <meta name="twitter:title" content="NUMER — BoFajnieTu"/>
-<meta name="twitter:image" content="http://static1.squarespace.com/static/66794c0184324035e9bb5b17/6679e2179d8c9b3efb317042/6679e2179d8c9b3efb317043/1719780517702/2.jpg?format=1500w"/>
+<meta name="twitter:image" content="/images/LogoB50.png"/>
 <meta name="twitter:card" content="summary"/>
 <meta name="description" content="" />
 <link rel="preconnect" href="https://images.squarespace-cdn.com">
@@ -1144,7 +1144,7 @@ TYTUŁ
 <!-- SKRYPT -->
 <script> 
   const items = [
-    //{ content: 'bluszczanska_salon.jpg' },
+    { content: 'bluszczanska_salon.jpg' },
     { content: 'bluszczanska_lazienka.jpg' },
     { content: 'bluszczanska_gabinet.jpg' },
     { content: 'bluszczanska_p5.jpg' },
