--- a/portfolio/example.html
+++ b/portfolio/example.html
@@ -1144,7 +1144,7 @@ TYTUŁ
 <!-- SKRYPT -->
 <script> 
   const items = [
-    { content: 'bluszczanska_salon.jpg' },
+    { content: 'Jakiś tekst. Np. opis' },
     { content: 'bluszczanska_lazienka.jpg' },
     { content: 'bluszczanska_gabinet.jpg' },
     { content: 'bluszczanska_p5.jpg' },
