--- a/portfolio/example.html
+++ b/portfolio/example.html
@@ -1242,29 +1242,30 @@ TYTUŁ
   data-collection-type="portfolio-index-background"
 >
     <a href="/portfolio/1" class="item-pagination-link item-pagination-link--prev">
-      <div class="item-pagination-icon icon icon--stroke">
-        <svg class="caret-left-icon--small" viewBox="0 0 9 16">
-          <polyline fill="none" stroke-miterlimit="10" points="7.3,14.7 2.5,8 7.3,1.2"/>
-        </svg>
-      </div>
-      <span class="pagination-title-wrapper">
-        <div class="visually-hidden">Previous</div>
-        <div class="item-pagination-prev-next">Previous</div>
-        <h2 class="item-pagination-title">1</h2>
-      </span>
-    </a>
-    <a href="/portfolio/3" class="item-pagination-link item-pagination-link--next">
-      <div class="pagination-title-wrapper">
-        <div class="visually-hidden">Next</div>
-        <div class="item-pagination-prev-next">Next</div>
-        <h2 class="item-pagination-title">3</h2>
-      </div>
-      <div class="item-pagination-icon icon icon--stroke">
-        <svg class="caret-right-icon--small" viewBox="0 0 9 16">
-          <polyline fill="none" stroke-miterlimit="10" points="1.6,1.2 6.5,7.9 1.6,14.7"/>
-        </svg>
-      </div>
-    </a>
+  <div class="item-pagination-icon icon icon--stroke">
+    <svg class="caret-left-icon--small" viewBox="0 0 9 16">
+      <polyline fill="none" stroke-miterlimit="10" points="7.3,14.7 2.5,8 7.3,1.2"></polyline>
+    </svg>
+  </div>
+  <span class="pagination-title-wrapper">
+    <div class="visually-hidden">Previous</div>
+    <div class="item-pagination-prev-next">Previous</div>
+    <h2 class="item-pagination-title">1</h2>
+  </span>
+</a>
+
+<a href="/portfolio/3" class="item-pagination-link item-pagination-link--next">
+  <div class="pagination-title-wrapper">
+    <div class="visually-hidden">Next</div>
+    <div class="item-pagination-prev-next">Next</div>
+    <h2 class="item-pagination-title">3</h2>
+  </div>
+  <div class="item-pagination-icon icon icon--stroke">
+    <svg class="caret-right-icon--small" viewBox="0 0 9 16">
+      <polyline fill="none" stroke-miterlimit="10" points="1.6,1.2 6.5,7.9 1.6,14.7"></polyline>
+    </svg>
+  </div>
+</a>
     <script>
       
       document.addEventListener('DOMContentLoaded', function() {
