--- a/portfolio/example.html
+++ b/portfolio/example.html
@@ -1268,6 +1268,9 @@ TYTUŁ
 </a>        
       <!-- SKRYPT -->
     <script>
+fetch('/portfolio/order.txt?cacheBust=' + Date.now())
+  .then(response => response.text())
+      
  document.addEventListener('DOMContentLoaded', function() {
   // Get the current page and remove .html if present
   let currentPage = window.location.pathname.split('/').pop().replace(/\.html$/, '');
